<resources>
    <string name="msg_default_status">Place a QR code inside the viewfinder rectangle to scan it.</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="wifi">wifi</string>
    <string name="ad_learn_more">Visit Advertiser</string>
    <string name="live_label">LIVE</string>
    <string name="open_source_licenses_title">Open source licenses</string>
    <string name="open_source_licenses_description">License details for open source software</string>
    <string name="accessibility_enter_fullscreen">Enter fullscreen</string>
    <string name="accessibility_play">Play video</string>
    <string name="accessibility_next">Next video</string>
    <string name="accessibility_previous">Previous video</string>
    <string name="accessibility_overflow">More options</string>
    <string name="accessibility_collapse">Minimize</string>
    <string name="accessibility_addto">Add to</string>
    <string name="accessibility_share">Share</string>
    <string name="accessibility_info_cards">Info cards</string>
    <string name="pref_subtitles_category">Captions</string>
    <string name="pref_subtitles_standard_category">Standard Options</string>
    <string name="pref_subtitles_custom_category">Custom Options</string>
    <string name="pref_subtitles_scale_title">Text size</string>
    <string name="pref_subtitles_style_title">Subtitles style</string>
    <string name="pref_subtitles_font_title">Font family</string>
    <string name="pref_subtitles_text_color_title">Text color</string>
    <string name="pref_subtitles_text_opacity_title">Text opacity</string>
    <string name="pref_subtitles_background_color_title">Background color</string>
    <string name="pref_subtitles_background_opacity_title">Background opacity</string>
    <string name="pref_subtitles_window_color_title">Window color</string>
    <string name="pref_subtitles_window_opacity_title">Window opacity</string>
    <string name="pref_subtitles_edge_type_title">Edge type</string>
    <string name="pref_subtitles_edge_color_title">Edge color</string>
    <string name="pref_background_audio_enabled_title">Background audio</string>
    <string name="pref_background_audio_enabled_summary">Continue playing audio when the app is running in the background or the screen is switched off</string>
    <string name="pref_offline_category">Offline</string>
    <string name="pref_offline_quality_title">Quality</string>
    <string name="pref_offline_network_policy_title">Add over Wifi only</string>
    <string name="pref_offline_storage_title_primary">Internal storage</string>
    <string name="pref_offline_storage_title_sdcard">SD card</string>
    <string name="pref_offline_options_title">Options</string>
    <string name="pref_offline_use_sd_card_title">Use SD card</string>
    <string name="pref_offline_use_sd_card_summary">Store offline videos to the SD card</string>
    <string name="pref_offline_insert_sd_card_title">Insert an SD card</string>
    <string name="pref_offline_insert_sd_card_summary">Insert an SD card to enable selection of location to store offline content</string>
    <string name="pref_offline_help_title">Offline help</string>
    <string name="pref_offline_help_summary">Find answers to your questions about offline</string>
    <string name="pref_developer_show_offline_http_queue_title">Show offline request queue</string>
    <string name="pref_developer_show_offline_http_queue_summary">Show all requests in the offline queue that will be sent when we return online</string>
    <string name="pref_developer_offline_resync_title">Offline Resync</string>
    <string name="pref_developer_offline_resync_summary">Enable/disable periodic sync; force sync</string>
    <string name="pref_developer_offline_ad_title">Offline Ads &amp; Frequency Cap</string>
    <string name="pref_developer_offline_ad_summary">Show offline ads; edit ad playback counts, expiration, frequency cap</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="menu_search">Search</string>
    <string name="no_videos_found">No videos found</string>
    <string name="no_playlists_found">No playlists found</string>
    <string name="no_events_found">No recent activity</string>
    <string name="no_uploads_found">No uploads found</string>
    <string name="no_favorites_found">No favorites found</string>
    <string name="pref_general_category">General</string>
    <string name="pref_content_localization_title">Content localization</string>
    <string name="pref_content_localization_summary">Prioritize channels and videos from a specific country or region</string>
    <string name="pref_search_category">Search</string>
    <string name="pref_default_hq_title">High quality on mobile</string>
    <string name="pref_default_hq_summary">Start videos in high quality when connected to a mobile network. Startup may take longer.</string>
    <string name="pref_about_category">About</string>
    <string name="pref_video_notifications_enabled_title">Notifications</string>
    <string name="pref_video_notifications_enabled_summary">Receive content notifications</string>
    <string name="pref_mobile_terms_title">Google Mobile Terms of Service</string>
    <string name="pref_mobile_terms_summary">Read Google Mobile Terms of Service</string>
    <string name="pref_youtube_terms_title">YouTube Terms of Service</string>
    <string name="pref_youtube_terms_summary">"Read YouTube's Terms of Service"</string>
    <string name="pref_mobile_privacy_title">Google Mobile Privacy Policy</string>
    <string name="pref_mobile_privacy_summary">Read Google Mobile Privacy Policy</string>
    <string name="pref_youtube_privacy_title">YouTube Privacy Policy</string>
    <string name="pref_youtube_privacy_summary">"Read YouTube's Privacy Policy"</string>
    <string name="pref_help_title">Help</string>
    <string name="pref_help_summary">Find answers to your YouTube questions here</string>
    <string name="pref_version_title">App version</string>
    <string name="pref_feedback_title">Send feedback</string>
    <string name="pref_feedback_summary">Help us make YouTube better</string>
    <string name="pref_improve_youtube">Improve YouTube</string>
    <string name="pref_improve_youtube_summary">Help improve YouTube by sending anonymous usage data</string>
    <string name="pref_send_to_tv_category">Connected TVs</string>
    <string name="pref_developer_category">Developer</string>
    <string name="pref_developer_gdata_hostname_title">GData server</string>
    <string name="pref_developer_gdata_hostname_summary">Host %1$s selected</string>
    <string name="pref_developer_innertube_apiversion_title">InnerTube API version</string>
    <string name="pref_developer_innertube_apiversion_summary">API version %1$s selected</string>
    <string name="pref_developer_apiary_host_title">Apiary backend</string>
    <string name="pref_developer_apiary_host_summary">%1$s selected</string>
    <string name="pref_developer_api_request_logging_title">Log API calls</string>
    <string name="pref_developer_api_request_logging_summary">Logs API requests and response summaries to logcat</string>
    <string name="pref_developer_full_api_response_logging_title">Log full API responses</string>
    <string name="pref_developer_full_api_response_logging_summary">Logs full API responses to logcat. This is very verbose</string>
    <string name="pref_developer_online_ads_title">Online ads</string>
    <string name="pref_developer_online_ads_summary">Show online ads preferences for controlling ads requests</string>
    <string name="pref_developer_overridable_network_status_title">Force offline</string>
    <string name="pref_developer_overridable_network_status_summary">Makes network status report that it is offline</string>
    <string name="channel_uploads">Uploads</string>
    <string name="channel_activity">Activity</string>
    <string name="channel_favorites">Favorites</string>
    <string name="channel_playlists">Playlists</string>
    <string name="upload_dialog_message">Depending on your data plan, uploading videos when not connected to Wi-Fi may result in additional charges</string>
    <string name="upload_when_on_wifi">Only when on Wi-Fi</string>
    <string name="upload_on_any_network">On any network</string>
    <string name="upload_dialog_modify_message">You can change this setting at anytime in the app settings</string>
    <string name="pref_upload_policy_title">Uploads</string>
    <string name="pref_upload_policy_summary">Specify network preferences for uploads</string>
    <string name="live_now_events">Live now</string>
    <string name="recent_events">Recent</string>
    <string name="play_on_label">Play on</string>
</resources>