<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/pref_help_title" android:key="help" android:summary="@string/pref_help_summary" />
    <Preference android:title="@string/pref_feedback_title" android:key="feedback" android:summary="@string/pref_feedback_summary" />
    <Preference android:title="@string/pref_mobile_terms_title" android:key="mobile_terms" android:summary="@string/pref_mobile_terms_summary" />
    <Preference android:title="@string/pref_youtube_terms_title" android:key="youtube_terms" android:summary="@string/pref_youtube_terms_summary" />
    <Preference android:title="@string/pref_mobile_privacy_title" android:key="mobile_privacy" android:summary="@string/pref_mobile_privacy_summary" />
    <Preference android:title="@string/pref_youtube_privacy_title" android:key="youtube_privacy" android:summary="@string/pref_youtube_privacy_summary" />
    <Preference android:title="@string/open_source_licenses_title" android:key="open_source_licenses" android:summary="@string/open_source_licenses_description" />
    <Preference android:enabled="false" android:title="@string/pref_version_title" android:key="version" />
</PreferenceScreen>