<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:entries="@array/pref_developer_gdata_hostname_entries" android:title="@string/pref_developer_gdata_hostname_title" android:key="gdata_hostname" android:summary="@string/pref_developer_gdata_hostname_summary" android:defaultValue="0" android:entryValues="@array/pref_developer_gdata_hostname_entries" />
    <ListPreference android:title="@string/pref_developer_apiary_host_title" android:key="ApiaryHostSelection" android:summary="@string/pref_developer_apiary_host_summary" android:defaultValue="0" />
    <ListPreference android:title="@string/pref_developer_innertube_apiversion_title" android:key="InnerTubeApiSelection" android:summary="@string/pref_developer_innertube_apiversion_summary" android:defaultValue="0" />
    <CheckBoxPreference android:title="@string/pref_developer_api_request_logging_title" android:key="ApiRequestLogging" android:summary="@string/pref_developer_api_request_logging_summary" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/pref_developer_full_api_response_logging_title" android:key="FullApiResponseLogging" android:summary="@string/pref_developer_full_api_response_logging_summary" android:defaultValue="false" />
    <Preference android:title="@string/pref_developer_online_ads_title" android:key="OnlineAd" android:summary="@string/pref_developer_online_ads_summary" />
    <CheckBoxPreference android:title="@string/pref_developer_overridable_network_status_title" android:key="overridable_network_status" android:summary="@string/pref_developer_overridable_network_status_summary" android:defaultValue="false" />
    <Preference android:title="@string/pref_developer_show_offline_http_queue_title" android:key="ShowOfflineHttpQueue" android:summary="@string/pref_developer_show_offline_http_queue_summary" />
    <Preference android:title="@string/pref_developer_offline_resync_title" android:key="OfflineResync" android:summary="@string/pref_developer_offline_resync_summary" />
    <Preference android:title="@string/pref_developer_offline_ad_title" android:key="OfflineAd" android:summary="@string/pref_developer_offline_ad_summary" />
</PreferenceScreen>