<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/pref_default_hq_title" android:key="default_hq" android:summary="@string/pref_default_hq_summary" />
    <CheckBoxPreference android:title="@string/pref_background_audio_enabled_title" android:key="background_audio_enabled" android:summary="@string/pref_background_audio_enabled_summary" android:defaultValue="true" />
    <ListPreference android:entries="@array/upload_policy_entries" android:title="@string/pref_upload_policy_title" android:key="upload_policy" android:summary="@string/pref_upload_policy_summary" android:defaultValue="@string/wifi" android:entryValues="@array/upload_policy_values" />
    <ListPreference android:title="@string/pref_content_localization_title" android:key="country" android:summary="@string/pref_content_localization_summary" />
    <CheckBoxPreference android:title="@string/pref_improve_youtube" android:key="dev_retention_enabled" android:summary="@string/pref_improve_youtube_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_video_notifications_enabled_title" android:key="video_notifications_enabled" android:summary="@string/pref_video_notifications_enabled_summary" android:defaultValue="true" />
</PreferenceScreen>