<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="subtitles_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:yt="http://schemas.android.com/apk/res/com.google.android.youtube">
    <PreferenceCategory android:title="@string/pref_subtitles_standard_category" android:key="subtitles_standard_options">
        <ListPreference android:title="@string/pref_subtitles_scale_title" android:key="subtitles_scale" />
        <ListPreference android:title="@string/pref_subtitles_style_title" android:key="subtitles_style" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_subtitles_custom_category" android:key="subtitles_custom_options">
        <ListPreference android:title="@string/pref_subtitles_font_title" android:key="subtitles_font" />
        <com.google.android.apps.youtube.app.ui.SubtitlesColorListPreference android:title="@string/pref_subtitles_text_color_title" android:key="subtitles_text_color" />
        <ListPreference android:title="@string/pref_subtitles_text_opacity_title" android:key="subtitles_text_opacity" />
        <ListPreference android:title="@string/pref_subtitles_edge_type_title" android:key="subtitles_edge_type" />
        <com.google.android.apps.youtube.app.ui.SubtitlesColorListPreference android:title="@string/pref_subtitles_edge_color_title" android:key="subtitles_edge_color" />
        <com.google.android.apps.youtube.app.ui.SubtitlesColorListPreference android:title="@string/pref_subtitles_background_color_title" android:key="subtitles_background_color" />
        <ListPreference android:title="@string/pref_subtitles_background_opacity_title" android:key="subtitles_background_opacity" />
        <com.google.android.apps.youtube.app.ui.SubtitlesColorListPreference android:title="@string/pref_subtitles_window_color_title" android:key="subtitles_window_color" />
        <ListPreference android:title="@string/pref_subtitles_window_opacity_title" android:key="subtitles_window_opacity" />
    </PreferenceCategory>
</PreferenceScreen>