<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:title="@string/pref_general_category" android:fragment="com.google.android.apps.youtube.app.honeycomb.SettingsActivity$GeneralPrefsFragment" />
    <header android:title="@string/pref_send_to_tv_category" android:fragment="com.google.android.apps.youtube.app.honeycomb.SettingsActivity$SendToTvPrefsFragment" />
    <header android:title="@string/pref_search_category" android:fragment="com.google.android.apps.youtube.app.honeycomb.SettingsActivity$SearchPrefsFragment" />
    <header android:title="@string/pref_offline_category" android:fragment="com.google.android.apps.youtube.app.honeycomb.SettingsActivity$OfflinePrefsFragment" />
    <header android:title="@string/pref_subtitles_category" android:fragment="com.google.android.apps.youtube.app.honeycomb.SettingsActivity$SubtitlesPrefsFragment" />
    <header android:fragment="com.google.android.apps.youtube.app.honeycomb.SettingsActivity$DogfoodPrefsFragment" />
    <header android:title="@string/pref_developer_category" android:fragment="com.google.android.apps.youtube.app.honeycomb.SettingsActivity$DeveloperPrefsFragment" />
    <header android:title="@string/pref_about_category" android:fragment="com.google.android.apps.youtube.app.honeycomb.SettingsActivity$AboutPrefsFragment" />
</preference-headers>