<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:yt="http://schemas.android.com/apk/res/com.google.android.youtube">
    <LinearLayout android:orientation="vertical" android:id="@id/channel_activity_content" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include layout="@layout/guide_channel_header" />
        <com.google.android.apps.youtube.core.ui.TabRow android:id="@id/tabrow" android:background="@color/tab_row_solid_background" android:layout_width="fill_parent" android:layout_height="@dimen/tab_row_height" />
        <com.google.android.apps.youtube.core.ui.Workspace android:id="@id/workspace" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.apps.youtube.core.ui.PagedListView android:id="@id/uploads" android:tag="@string/channel_uploads" android:layout_width="fill_parent" android:layout_height="fill_parent" yt:textWhenEmpty="@string/no_uploads_found" yt:statusView="@layout/list_status_item" />
            <com.google.android.apps.youtube.core.ui.PagedListView android:id="@id/favorites" android:tag="@string/channel_favorites" android:layout_width="fill_parent" android:layout_height="fill_parent" yt:textWhenEmpty="@string/no_favorites_found" yt:statusView="@layout/list_status_item" />
            <com.google.android.apps.youtube.core.ui.PagedListView android:id="@id/activity" android:tag="@string/channel_activity" android:layout_width="fill_parent" android:layout_height="fill_parent" yt:textWhenEmpty="@string/no_events_found" yt:statusView="@layout/list_status_item" />
            <com.google.android.apps.youtube.core.ui.PagedListView android:id="@id/playlists" android:tag="@string/channel_playlists" android:layout_width="fill_parent" android:layout_height="fill_parent" yt:textWhenEmpty="@string/no_playlists_found" yt:statusView="@layout/list_status_item" />
        </com.google.android.apps.youtube.core.ui.Workspace>
    </LinearLayout>
    <ProgressBar android:layout_gravity="center" android:id="@id/channel_activity_loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</FrameLayout>