<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menu_cast" android:title="@string/play_on_label" android:showAsAction="always" android:actionLayout="@layout/castmediaroutebutton" />
    <item android:icon="@drawable/ic_menu_search" android:id="@id/menu_search" android:orderInCategory="50" android:title="@string/menu_search" android:imeOptions="actionSearch" android:showAsAction="always" android:actionViewClass="android.widget.SearchView" />
    <item android:icon="@drawable/ic_menu_settings" android:id="@id/menu_settings" android:orderInCategory="101" android:title="@string/menu_settings" android:showAsAction="never" />
    <item android:id="@id/menu_feedback" android:orderInCategory="102" android:title="@string/menu_feedback" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_help" android:id="@id/menu_help" android:orderInCategory="103" android:title="@string/menu_help" android:showAsAction="never" />
    <item android:id="@id/menu_home" android:visible="false" />
    <item android:id="@id/menu_browse" android:visible="false" />
    <item android:id="@id/menu_my_channel" android:visible="false" />
</menu>