<?xml version="1.0" encoding="utf-8"?>
<com.google.android.apps.youtube.core.v11.ui.ActionBarWorkspace android:id="@id/workspace" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:yt="http://schemas.android.com/apk/res/com.google.android.youtube">
    <com.google.android.apps.youtube.core.ui.PagedListView android:id="@id/live_now" android:tag="@string/live_now_events" android:layout_width="fill_parent" android:layout_height="fill_parent" yt:textWhenEmpty="@string/no_videos_found" yt:statusView="@layout/list_status_item" />
    <com.google.android.apps.youtube.core.ui.PagedListView android:id="@id/recent" android:tag="@string/recent_events" android:layout_width="fill_parent" android:layout_height="fill_parent" yt:textWhenEmpty="@string/no_videos_found" yt:statusView="@layout/list_status_item" />
</com.google.android.apps.youtube.core.v11.ui.ActionBarWorkspace>