<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="12.0dip" android:paddingTop="4.0dip" android:paddingRight="12.0dip" android:paddingBottom="4.0dip" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/medium_font_size" android:textColor="@color/primary_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/upload_dialog_message" />
        <RadioGroup android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:textSize="@dimen/medium_font_size" android:textColor="@color/primary_text" android:id="@id/on_wifi_only" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/upload_when_on_wifi" />
            <RadioButton android:textSize="@dimen/medium_font_size" android:textColor="@color/primary_text" android:id="@id/on_any_network" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/upload_on_any_network" />
        </RadioGroup>
        <TextView android:textSize="@dimen/medium_font_size" android:textStyle="italic" android:textColor="@color/secondary_font" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/upload_dialog_modify_message" />
    </LinearLayout>
</ScrollView>