<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/controls_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/player_error_view" android:background="@color/darker_transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" />
    <View android:id="@id/bottom_bar_background" android:background="@drawable/player_bottom_bar" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentBottom="true" />
    <View android:id="@id/top_bar_background" android:background="@drawable/player_top_bar" android:layout_width="fill_parent" android:layout_height="56.0dip" android:layout_alignParentTop="true" />
    <com.google.android.apps.youtube.core.ui.TouchImageView android:id="@id/fullscreen_button" android:layout_width="48.0dip" android:layout_height="40.0dip" android:src="@drawable/player_fullscreen" android:scaleType="center" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/accessibility_enter_fullscreen" style="@style/PlayerButton" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/time_bar_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/fullscreen_button" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:layout_alignWithParentIfMissing="true">
        <TextView android:textSize="@dimen/small_font_size" android:textColor="#fff2f2f2" android:gravity="center" android:id="@id/live_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:minHeight="40.0dip" android:text="@string/live_label" android:drawableLeft="@drawable/player_live_dot" android:drawablePadding="8.0dip" />
        <com.google.android.apps.youtube.core.player.overlay.TimeBar android:id="@id/time_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <com.google.android.apps.youtube.core.ui.TouchImageView android:id="@id/player_overflow_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_overflow" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="@string/accessibility_overflow" style="@style/PlayerButton" />
    <FrameLayout android:id="@id/player_additional_view_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/player_overflow_button" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" />
    <com.google.android.apps.youtube.core.ui.TouchImageView android:id="@id/player_share_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_share" android:layout_toLeftOf="@id/player_additional_view_container" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/accessibility_share" style="@style/PlayerButton" />
    <com.google.android.apps.youtube.core.ui.TouchImageView android:id="@id/player_addto_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_addto" android:layout_toLeftOf="@id/player_share_button" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/accessibility_addto" style="@style/PlayerButton" />
    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/player_learn_more_button" android:paddingLeft="4.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginRight="2.0dip" android:text="@string/ad_learn_more" android:shadowColor="#7f000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="0.01" android:layout_toLeftOf="@id/player_share_button" android:layout_alignParentTop="true" android:layout_alignWithParentIfMissing="true" style="@style/PlayerButton" />
    <com.google.android.apps.youtube.core.ui.TouchImageView android:id="@id/player_control_play_pause_replay_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="36.0dip" android:layout_marginRight="36.0dip" android:src="@drawable/player_play" android:scaleType="center" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_play" style="@style/PlayerButton" />
    <com.google.android.apps.youtube.core.ui.TouchImageView android:id="@id/player_control_previous_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_prev" android:scaleType="center" android:layout_toLeftOf="@id/player_control_play_pause_replay_button" android:layout_centerVertical="true" android:contentDescription="@string/accessibility_previous" style="@style/PlayerButton" />
    <com.google.android.apps.youtube.core.ui.TouchImageView android:id="@id/player_control_next_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_next" android:scaleType="center" android:layout_toRightOf="@id/player_control_play_pause_replay_button" android:layout_centerVertical="true" android:contentDescription="@string/accessibility_next" style="@style/PlayerButton" />
    <com.google.android.apps.youtube.core.ui.TouchImageView android:id="@id/player_collapse_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/player_collapse" android:scaleType="center" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/accessibility_collapse" style="@style/PlayerButton" />
    <com.google.android.apps.youtube.core.ui.TouchImageView android:id="@id/info_card_button" android:padding="9.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/info_card_icon" android:scaleType="center" android:layout_toRightOf="@id/player_collapse_button" android:layout_alignParentTop="true" android:contentDescription="@string/accessibility_info_cards" style="@style/PlayerButton" />
    <ProgressBar android:id="@id/player_loading_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:layout_centerInParent="true" />
</RelativeLayout>